Configure default editor

--- a/roles/workstation/tasks/basic_tools.yml
+++ b/roles/workstation/tasks/basic_tools.yml
@@ -7,3 +7,8 @@
     - mc
     - pv
     - vim
+
+- name: Configure default editor
+  template: 
+    src: selected_editor.j2
+    dest: $HOME/.selected_editor
