--- a/roles/workstation/tasks/main.yml
+++ b/roles/workstation/tasks/main.yml
@@ -1,4 +1,5 @@
 - import_tasks: basic_tools.yml
 - import_tasks: google_chrome_stable.yml
+- import_tasks: gui_tools.yml
 - import_tasks: development_tools.yml
 - import_tasks: tex_tools.yml
