More tools and settings

--- a/roles/workstation/tasks/main.yml
+++ b/roles/workstation/tasks/main.yml
@@ -1,6 +1,10 @@
+- import_tasks: admin_tools.yml
 - import_tasks: basic_tools.yml
+- import_tasks: default_apps.yml
 - import_tasks: google_chrome_stable.yml
 - import_tasks: gui_tools.yml
 - import_tasks: development_tools.yml
+- import_tasks: security.yml
 - import_tasks: tex_tools.yml
+- import_tasks: tmp_on_tmpfs.yml
 - import_tasks: vim.yml 
