--- a/roles/workstation/tasks/gui_tools.yml
+++ b/roles/workstation/tasks/gui_tools.yml
@@ -5,3 +5,7 @@
     packages:
     - terminator
   become: true
+
+- name: Install skype
+  become: true
+  command: snap install skype --classic creates=/snap/bin/skype
