--- a/roles/workstation/tasks/gui_tools.yml
+++ b/roles/workstation/tasks/gui_tools.yml
@@ -9,3 +9,7 @@
 - name: Install skype
   become: true
   command: snap install skype --classic creates=/snap/bin/skype
+
+- name: Install Spotify
+  become: true
+  command: snap install spotify --classic creates=/snap/bin/spotify
