--- a/roles/workstation/tasks/main.yml
+++ b/roles/workstation/tasks/main.yml
@@ -2,6 +2,7 @@
 - import_tasks: basic_tools.yml
 - import_tasks: cleanup.yml
 - import_tasks: default_apps.yml
+- import_tasks: dictionaries.yml
 - import_tasks: google_chrome_stable.yml
 - import_tasks: gui_tools.yml
 - import_tasks: development_tools.yml
