--- a/roles/workstation/tasks/main.yml
+++ b/roles/workstation/tasks/main.yml
@@ -3,6 +3,7 @@
 - import_tasks: cleanup.yml
 - import_tasks: default_apps.yml
 - import_tasks: dictionaries.yml
+- import_tasks: dropbox.yml
 - import_tasks: google_chrome_stable.yml
 - import_tasks: gui_tools.yml
 - import_tasks: development_tools.yml
