--- a/roles/remote_unlock_encrypted_volume/tasks/main.yml
+++ b/roles/remote_unlock_encrypted_volume/tasks/main.yml
@@ -7,13 +7,13 @@
       - cryptsetup
   become: true
 
-- name: Copy unlock hook script
+# Ugly: https://bugs.launchpad.net/ubuntu/+source/busybox/+bug/1651818/comments/11
+- name: Patch cryptsetup
   become: true
-  template: 
-    src: crypt_unlock.sh.j2
-    dest: /etc/initramfs-tools/hooks/crypt_unlock.sh
-    mode: 0755
-  notify: Update initramfs
+  patch:
+    src: cryptroot-unlock-neutered-busybox-progs.patch
+    basedir: /usr/share/cryptsetup/initramfs/bin/
+    strip: 1
 
 - name: Configure dropbear in initramfs
   become: true
