--- a/roles/remote_unlock_encrypted_volume/tasks/main.yml
+++ b/roles/remote_unlock_encrypted_volume/tasks/main.yml
@@ -14,6 +14,7 @@
     src: cryptroot-unlock-neutered-busybox-progs.patch
     basedir: /usr/share/cryptsetup/initramfs/bin/
     strip: 1
+  notify: Update initramfs
 
 - name: Configure dropbear in initramfs
   become: true
