--- a/roles/workstation/tasks/default_apps.yml
+++ b/roles/workstation/tasks/default_apps.yml
@@ -3,6 +3,11 @@
     src: mimeapps.list.j2
     dest: $HOME/.mimeapps.list
 
+- name: Install python-psutil
+  become: true
+  apt:
+    pkg: python-psutil
+
 - name: Configure launchbar
   dconf:
     key: "/org/gnome/shell/favorite-apps"
