--- a/roles/workstation/tasks/main.yml
+++ b/roles/workstation/tasks/main.yml
@@ -1,7 +1,6 @@
 - import_tasks: admin_tools.yml
 - import_tasks: basic_tools.yml
 - import_tasks: cleanup.yml
-- import_tasks: default_apps.yml
 - import_tasks: dictionaries.yml
 - import_tasks: dropbox.yml
 - import_tasks: google_chrome_stable.yml
@@ -13,3 +12,6 @@
 - import_tasks: tex_tools.yml
 - import_tasks: tmp_on_tmpfs.yml
 - import_tasks: vim.yml 
+
+# Must be last, so that launchbar is configured correctly
+- import_tasks: default_apps.yml
