--- a/roles/workstation/tasks/development_tools.yml
+++ b/roles/workstation/tasks/development_tools.yml
@@ -13,3 +13,8 @@
     - python3-pip
     - sloccount
   become: true
+
+- name: Install gitconfig
+  template:
+    src: gitconfig.j2
+    dest: $HOME/.gitconfig
