--- a/roles/workstation/tasks/gui_tools.yml
+++ b/roles/workstation/tasks/gui_tools.yml
@@ -18,3 +18,8 @@
 - name: Install Slack
   become: true
   command: snap install slack --classic creates=/snap/bin/slack
+
+- name: Configure terminator
+  template:
+    src: terminator_config.j2
+    dest: $HOME/.config/terminator/config
