--- a/roles/workstation/tasks/main.yml
+++ b/roles/workstation/tasks/main.yml
@@ -4,6 +4,7 @@
 - import_tasks: cleanup.yml
 - import_tasks: cloud_tools.yml
 - import_tasks: dictionaries.yml
+- import_tasks: docker.yml
 - import_tasks: dropbox.yml
 - import_tasks: google_chrome_stable.yml
 - import_tasks: gui_tools.yml
