Install google-cloud-sdk via snap

--- a/roles/workstation/tasks/cloud_tools.yml
+++ b/roles/workstation/tasks/cloud_tools.yml
@@ -2,3 +2,7 @@
   pip:
     name: awscli
     extra_args: --user
+
+- name: Install google-cloud-sdk
+  become: true
+  command: snap install google-cloud-sdk creates=/snap/bin/gcloud
