--- a/roles/workstation/tasks/cloud_tools.yml
+++ b/roles/workstation/tasks/cloud_tools.yml
@@ -5,4 +5,4 @@
 
 - name: Install google-cloud-sdk
   become: true
-  command: snap install google-cloud-sdk creates=/snap/bin/gcloud
+  command: snap install google-cloud-sdk --classic creates=/snap/bin/gcloud
