Prefer distributor pip2/3

--- a/roles/workstation/tasks/00_bootstrap.yml
+++ b/roles/workstation/tasks/00_bootstrap.yml
@@ -1,22 +1,9 @@
-- name: Ensure no APT pip
+- name: pip2/3
   apt:
     name: "{{ packages }}"
-    state: absent
+    state: present
   vars:
     packages:
     - python-pip
     - python3-pip
   become: true
-
-- name: Install pip2
-  shell: "curl https://bootstrap.pypa.io/get-pip.py | python2 -"
-  args:
-    creates: /usr/local/bin/pip2
-  become: true
-
-- name: Install pip3
-  shell: "curl https://bootstrap.pypa.io/get-pip.py | python3 -"
-  args:
-    creates: /usr/local/bin/pip3
-  become: true
-
