--- a/roles/workstation/tasks/vim.yml
+++ b/roles/workstation/tasks/vim.yml
@@ -6,11 +6,15 @@
     - git
     - vim-gnome
   become: true
+  tags:
+    - wsl
 
 - name: Configure default editor
   template: 
     src: selected_editor.j2
     dest: $HOME/.selected_editor
+  tags:
+    - wsl
 
 - name: Clone vim configuration
   git:
@@ -18,10 +22,13 @@
     dest: $HOME/.vim
     depth: 1
     update: no
+  tags:
+    - wsl
 
 - name: Link .vimrc to $HOME
   file:
     src: $HOME/.vim/.vimrc
     dest: $HOME/.vimrc
     state: link
-
+  tags:
+    - wsl
