--- a/roles/workstation/tasks/cloud_tools.yml
+++ b/roles/workstation/tasks/cloud_tools.yml
@@ -2,6 +2,16 @@
   pip:
     name: awscli
     extra_args: --user
+  tags:
+    - wsl
+
+- name: Install awscli shortcut
+  file:
+    src: "$HOME/.local/bin/aws"
+    dest: "$HOME/bin/aws"
+    state: link
+  tags:
+    - wsl
 
 - name: Install google-cloud-sdk
   become: true
