AWS IAM Authenticator

--- a/roles/workstation/tasks/cloud_tools.yml
+++ b/roles/workstation/tasks/cloud_tools.yml
@@ -24,3 +24,11 @@
     mode: 0775
   tags:
     - wsl
+
+- name: Install aws-iam-authenticator
+  get_url:
+    url: https://amazon-eks.s3-us-west-2.amazonaws.com/1.11.5/2018-12-06/bin/linux/amd64/aws-iam-authenticator
+    dest: $HOME/bin/aws-iam-authenticator
+    mode: 0755
+  tags:
+    - wsl
