--- a/roles/workstation/tasks/development_tools.yml
+++ b/roles/workstation/tasks/development_tools.yml
@@ -29,6 +29,12 @@
   tags:
     - wsl
 
+- name: Install nvm
+  shell: >
+    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.34.0/install.sh | bash
+  args:
+    creates: "{{ ansible_env.HOME }}/.nvm/nvm.sh"
+
 - name: Ensure $HOME/bin exists
   file:
     path: $HOME/bin
