Refactored, switch to Python3

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,4 @@ ansible_managed=DO NOT EDIT! This file is managed by Ansible.%n
   date: %Y-%m-%d %H:%M:%S
   user: {uid}
   host: {host}
+ansible_python_interpreter=/usr/bin/python3
