Enable ImageMagick to rasterize PDFs

--- a/roles/workstation/tasks/gui_tools.yml
+++ b/roles/workstation/tasks/gui_tools.yml
@@ -49,3 +49,10 @@
   apt:
     pkg:
       - openscad
+
+- name: Allow ImageMagick to rasterize PDFs
+  become: true
+  lineinfile:
+    path: /etc/ImageMagick-6/policy.xml
+    regex: domain.*coder.*pattern.*PDF
+    line: '  <policy domain="coder" rights="read | write" pattern="PDF" />'
