--- a/roles/workstation/tasks/security.yml
+++ b/roles/workstation/tasks/security.yml
@@ -8,6 +8,7 @@
     - pcscd
     - pinentry-curses
     - scdaemon
+    - wipe
     - yubikey-personalization
     - yubikey-personalization-gui
   become: true
