Rework shell configuration

--- a/roles/workstation/tasks/basic_tools.yml
+++ b/roles/workstation/tasks/basic_tools.yml
@@ -11,17 +11,23 @@
   tags:
     - wsl
 
-- name: Configure .bashrc
+- name: Copy shell configuration files
   template:
-    src: bashrc.j2
-    dest: $HOME/.bashrc
+    src: "{{ item }}.j2"
+    dest: "$HOME/.{{ item }}"
+  with_list:
+    - bashrc
+    - bash_aliases
+    - bash_logout
+    - profile
   tags:
     - wsl
 
-- name: Configure .profile
-  template:
-    src: profile.j2
-    dest: $HOME/.profile
+- name: Remove unnecessary shell configuration files
+  file:
+    path: '$HOME/.{{ item }}'
+    state: absent
+  with_list:
+    - bash_profile
   tags:
     - wsl
-
