Factor our security-related tasks

--- a/site.yml
+++ b/site.yml
@@ -3,6 +3,7 @@
   connection: local
   roles:
     - cklein.shell
+    - cklein.security
     - workstation
     - remote_unlock_encrypted_volume
   vars:
