--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,12 +5,25 @@ repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.4.0
     hooks:
-    -   id: trailing-whitespace
-    -   id: end-of-file-fixer
-    -   id: check-yaml
     -   id: check-added-large-files
+    -   id: check-merge-conflict
+    -   id: check-yaml
+    -   id: detect-aws-credentials
+    -   id: detect-private-key
+    -   id: end-of-file-fixer
+    -   id: trailing-whitespace
 - repo: https://github.com/ansible/ansible-lint.git
   rev: v4.2.0
   hooks:
     - id: ansible-lint
       files: \.(yaml|yml)$
+- repo: local
+  hooks:
+    - id: generic-roles
+      name: generic-roles
+      description: >-
+        Prevents accidentally leaving my name, username or email in any role,
+        preventing them from being generic.
+      language: pygrep
+      entry: '[Kk]lein'
+      files: '^roles/.*$'
