Factor our bootstrap and cleanup

--- a/roles/cklein.00_bootstrap/tasks/main.yaml
+++ b/roles/cklein.00_bootstrap/tasks/main.yaml
@@ -3,11 +3,12 @@
   apt:
     name:
       - python3-pip
-    state: present
   tags:
     - wsl
 
-- name: Ensure $HOME/bin folder
+- name: Create $HOME/bin
   file:
     path: $HOME/bin
     state: directory
+  tags:
+    - wsl
