Decouple failure from SmartCard's presence

--- a/roles/cklein.security/tasks/main.yaml
+++ b/roles/cklein.security/tasks/main.yaml
@@ -57,6 +57,7 @@
     echo "GPG keys imported at $(date -Is)" > $HOME/.gnupg/gpgkeys-imported.txt
   args:
     creates: $HOME/.gnupg/gpgkeys-imported.txt
+  ignore_errors: yes
   tags:
     - gpg
 
